# MCGiveCommandGenerator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/lang/: en_us.json  zh_cn.json
src/: ProgramConfig.ixx  main.ixx
src/Layers/: BackGround.ixx
src/Translation/: TranslationLibarary.ixx
src/Util/: Json.ixx  Utils.ixx
